# ftx

./: .env.example  Cargo.toml
examples/: btc_price.rs  get_account.rs  watch_market.rs
src/rest/: mod.rs  model.rs  tests.rs
src/ws/: mod.rs  tests.rs
