[package]
authors = ["Fabian Bösiger <boesiger.fabian@outlook.com>"]
categories = ["api-bindings"]
description = "Unofficial API Binding for the FTX Exchange."
edition = "2018"
keywords = ["exchange", "trading", "crypto", "market"]
license = "MIT OR Apache-2.0"
name = "ftx"
readme = "README.md"
repository = "https://github.com/fabianboesiger/ftx"
version = "0.3.1"

[dependencies]
chrono = { version = "0.4.19", features = ["serde"] }
crc32fast = "1.2.1"
dotenv = "0.15.0"
futures = { version = "0.3", optional = true }
hex = "0.4.3"
hmac-sha256 = "0.1.7"
log = "0.4"
reqwest = { version = "0.11", features = ["json", "socks"] }
rust_decimal = "1.15"
rust_decimal_macros = "1.15"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_with = { version = "1.10", features = ["chrono"] }
thiserror = "1.0"
tokio = { version = "1.11.0", features = ["macros"], optional = true }
tokio-tungstenite = { version = "0.15.0", optional = true }
tokio-socks = { version = "0.5.1", optional = true }
tokio-rustls = { version = "0.22.0", optional = true }
webpki-roots = { version = "0.21", optional = true }
webpki = { version = "0.21", optional = true }

[dev-dependencies]
env_logger = "0.9.0"
tokio = { version = "1.11.0", features = ["full"] }

[features]
default = ["ws"]
ws = ["tokio-tungstenite", "tokio", "futures", "tokio-socks", "tokio-rustls", "webpki-roots", "webpki"]
